<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/font"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/tv"
        android:layout_width="274dp"
        android:layout_height="73dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/bnt_tun"
        android:textColor="#E6000B"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="59dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/star"
        android:textColor="#357050"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="101dp"
        android:layout_height="124dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="81dp"
        android:src="@drawable/tunisia"
        app:layout_constraintBottom_toTopOf="@+id/tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="325dp"
        android:layout_marginBottom="202dp"
        android:fontFamily="sans-serif-black"
        android:text="Tunisia 2023"
        android:textColor="#E53935"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/mmaapp"
        android:layout_width="83dp"
        android:layout_height="156dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imghotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imghotel"
        android:layout_width="89dp"
        android:layout_height="158dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_hotel_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgticket"
        app:layout_constraintStart_toEndOf="@+id/mmaapp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imgticket"
        android:layout_width="92dp"
        android:layout_height="154dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_airplane_ticket_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgconv"
        app:layout_constraintStart_toEndOf="@+id/imghotel"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imgconv"
        android:layout_width="93dp"
        android:layout_height="152dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_currency_exchange_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgticket"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="86dp"
        android:layout_height="122dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="218dp"
        android:src="@drawable/cup"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="190dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/time"
        android:textAlignment="textStart"
        android:textColor="#3B7455"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/date"
        android:textColor="#E6000B"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>


